# Arduino-projects

./: README.md
back_end/: go.mod  main.go
back_end/controllers/: category.go  crime.go
back_end/database/: db.go
back_end/dto/: coordinates.go
back_end/middlewares/: cors.go
back_end/models/: category.go  crime.go
back_end/routes/: routes.go
excel_handler/: .gitignore  pyproject.toml
excel_handler/excel_handler/: database.py  script.py
front-end/: angular.json  package-lock.json  package.json
front-end/src/app/: app.component.html  app.component.ts  app.module.ts
front-end/src/app/components/charts/: charts.component.css  charts.component.html  charts.component.ts
front-end/src/app/components/filters/: filters.component.css  filters.component.html  filters.component.ts
front-end/src/app/components/map/: map.component.css  map.component.html  map.component.ts
front-end/src/app/services/: crime-data.service.ts  filters.service.ts
hc-sr04-distance-led/: README.md  hc-sr04-distance-led.ino
hc08-ble-servo-remote/: README.md  hc08-ble-servo-remote.ino
ldr-auto-dimming-led/: README.md  ldr-auto-dimming-led.ino
