[tool.poetry]
name = "excel-handler"
version = "0.1.0"
description = ""
authors = ["nicolas <nicolassosamachado25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
geopy = "^2.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
